style.css
@import url("https://fonts.googleapis.com/css?family=Advent+Pro|Montserrat|Cardo|Open+Sans");

.alertify-notifier {
  color: white;
  text-align: center;
}

body {
  padding-top: 100px;
}

.navbar-default {
  background: linear-gradient(to right, #D6D3B2, #C7CAB1);
  font-size: 1.5em;
  height: 100px;
  border: none;
}

.nav-img {
  width: 100px;
}

.nav-img a, .nav-img-text {
  background: none !important;
}

.nav img {
  width: 100%;
  border: 4px solid white;
}

.nav-img-text {
  padding-left: 0px !important;
  margin-top: 12.5px;
}

.nav-img-text div {
  display: flex;
  flex-direction: column;
}

.nav-img-text span:first-of-type {
  font-size: 1em;
  color: white !important;
}

.nav-img-text span:last-of-type {
  font-size: .5em;
  color: white !important;
}

.nav-text {
  color: white !important;
  font-weight: 600;
  font-size: 1.25em;
}

.navbar-right li {
  margin-top: 25px;
}

.navbar-right li:nth-child(2) {
  margin-left: 7px;
  margin-right: 7px;
}

.navbar-right li.active a {
  color: #728596 !important;
  border-radius: 5px;
}

.navbar-right li.inactive a:hover {
  background-color: none !important;
  color: #728596 !important;
  border-radius: 5px;
}

#About {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  background-image: url("images/about background.jpg");
  background-size: 100% 100%;
}

#Portfolio {
  background-color: white;
  background-size: cover;
  padding-bottom: 100px;
}

#About h1 {
  font-family: "Montserrat", sans-serif;
  color: white;
  padding-bottom: 7px;
  padding-top: 100px;
}

#About h3 {
  font-family: "Montserrat", serif;
  color: white;
  text-transform: uppercase;
  margin-top: 0px;
}

#Contact {
  padding-bottom: 175px;
  background-color: #D6D3B2;
  color: #728596;
}

#Contact p {
  color: white;
}

#Portfolio p {
  color: #303234;
  padding-bottom: 50px;
  margin-bottom: 0px;
}

.section-header {
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
  padding-top: 50px;
  font-weight: 800;
}

.profile-text {
  color: white;
  padding-top: 25px;
  padding-bottom: 250px;
  font-size: 1.5em;
  font-weight: 500;
}

.portfolio {
  padding-top: 50px;
}

.portfolio div {
  padding: 0;
}

.portfolio p {
  margin-bottom: 0;
}

.projects .first-row div, .projects .second-row div {
  width: 25%;
  height: 300px;
}

.first-row, .second-row {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.first-row div:nth-child(odd) {
  background-color: #D6D3B2;
}

.first-row div:nth-child(even) {
  background-color: #728596;
}

.second-row div:nth-child(even) {
  background-color: #D6D3B2;
}

.second-row div:nth-child(odd) {
  background-color: #728596;
}

.first-row div:hover, .second-row div:hover {
  cursor: pointer;
  opacity: .25;
  transition: opacity 0.2s ease-in-out;
}

.contact {
  padding-left: 15px;
  padding-right: 15px;
}

.stay-connected {
  font-family: "Montserrat", serif;
  font-weight: 600;
}

label {
  font-size: 1.25em;
}

.fcc, .social-icon {
  display: inline-block;
}

.form-row {
  padding-top: 75px;
}

.submit, .submit:active:focus {
  background-color: #728596 !important;
  outline: none !important;
  border: none !important;
  box-shadow: none !important;
}

@media (min-width: 500px) {
  #About h1 {
    font-size: 4em;
    font-weight: 700;
  }

  #About h3 {
    font-size: 1.2em;
    font-weight: 400;
  }

  .section-header {
    font-size: 2.5em;
  }
  .fcc, .social-icon {
    width: 5%;
    height: 5%;
  }
  .stay-connected {
    font-size: 1.75em;
  }

  .contact-row {
    padding-top: 50px;
  }
}

@media (max-width: 499px) {
  #About h1 {
    font-size: 3em;
    font-weight: 700;
  }

  #About h3 {
    font-size: 1em;
    font-weight: 400;
  }

  .fcc, .social-icon {
    width: 15%;
    height: 15%;
  }
  .contact, .stay-connected {
    padding-top: 25px;
  }
  .section-header {
    font-size: 1.5em;
  }
  .stay-connected {
    font-size: 1.25em;
  }
}

